# purrr

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-multi-platform.yml  format.yml
cmake/: config.hpp.in  purrrConfig.cmake.in
example/: main.cpp  shader.frag.hlsl  shader.vert.hlsl
inc/purrr/: buffer.hpp  config.hpp  context.hpp  event.hpp  exceptions.hpp  format.hpp  image.hpp  object.hpp  platform.hpp  program.hpp  programBuilder.hpp  programInfoBuilder.hpp  purrr.hpp  renderTarget.hpp  sampler.hpp  window.hpp
inc/purrr/vulkan/: buffer.hpp  context.hpp  exceptions.hpp  format.hpp  image.hpp  program.hpp  renderTarget.hpp  sampler.hpp  window.hpp
inc/purrr/win32/: context.hpp  window.hpp
inc/purrr/x11/: context.hpp  window.hpp
src/: context.cpp
src/utils/: set.hpp
src/vulkan/: buffer.cpp  context.cpp  exceptions.cpp  format.cpp  image.cpp  program.cpp  renderTarget.cpp  sampler.cpp  window.cpp
src/win32/: context.cpp  window.cpp
src/x11/: context.cpp  window.cpp
